fix: remove unsupported java option